
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   150: AstroFloyd, 11/01/2011
     - Updated Doxyfile
     
   149: AstroFloyd, 11/01/2011
     - Updated CMake files for release: 
       - added option to switch off code_version generation
       - remove plotpltn/p
       - add installation
     - Updated nagfor file
     
   148: AstroFloyd, 09/01/2011
     - Added CMake files
     - plotpltp: use constants
   
   147: AstroFloyd, 07/01/2011
     - Move unused (NRF) code from functions.f90 to unused_code.f90
     
   146: AstroFloyd, 07/01/2011
     - Updated copyright to 2011
     - Updated (Doxygen) comments: file and routine titles everywhere(?)
     - Removed old Fortran intrinsics (dlog)
     - Use integer system(), and with status=
     - In plotplt, made hlp,hlbl logical iso character (y/n)
     - Added intent()
          
   145: AstroFloyd, 06/01/2011
     - Updated code to compile with gfortran 4.5, F2008 standard
     - Updated Makefile
   
   144: AstroFloyd, 15/11/2010
     - plotplt: fix automatic plot limits 1.e-20 should have been -1.e20 -> -huge
     - findplt: use command-line arguments only; print syntax and exit otherwise
   
   143: AstroFloyd, 25/08/2010
     - added global variable libdir and read it from settings file
     
   142: AstroFloyd, 23/08/2010
     - plotmdl: clean up a little
     
   141: AstroFloyd, 23/08/2010
     - plotmdl: 
       - allow graphs with different x-variables (nx=1 or nx=ny only)
       - added special plots 304,305 for E,J_post-ce
       
   140: AstroFloyd, 23/08/2010
     - plotmdl: added variables 127-131 for gamma-CE
     
   139: AstroFloyd, 23/08/2010
     - plotmdl: 
       - variables 220-223: a,P,E,J orb for r(m)=Rrl
       - variables 224-227: a,P,E,J orb for alpha-CE
       - allow plot styles: lines, dots or both
     - plotplt: make plot styles compatible with plotmdl
     